<resources>
    <string name="app_name">TestProject</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="my_order">My order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="new_user">New user?</string>
    <string name="create_account"><u> Create Account</u></string>
    <string name="enter_email_id">"  E-mail id"</string>
    <string name="your_name">"  Your name"</string>
    <string name="enter_your_password">" Your password"</string>
    <string name="your_e_mail_id">"  Your E-mail id"</string>
    <string name="phone">" Phone"</string>
    <string name="confirm_password">" Confirm Password"</string>
    <string name="name">"Name :"</string>
    <string name="address">"Address :"</string>
    <string name="city">"City :"</string>
    <string name="phone_no">"Phone :"</string>
    <string name="postal_code">"Postal code :"</string>
    <string name="enter_your_postcode">" Enter your postcode"</string>
    <string name="facebook_app_id">758924944265734</string>
    <string name="fb_login_protocol_scheme">fb758924944265734</string>

</resources>
