<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/name"
            android:textColor="@color/Black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="name"
            android:textColor="@color/Black"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/address"
            android:textColor="@color/Black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/address_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="address"
            android:textColor="@color/Black"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/city"
            android:textColor="@color/Black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/city_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="city"
            android:textColor="@color/Black"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/phone_no"
            android:textColor="@color/Black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="7792827043"
            android:textColor="@color/Black"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/postal_code"
            android:textColor="@color/Black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/postal_code_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="323601"
            android:textColor="@color/Black"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

</LinearLayout>